# f2f

./: CMakeLists.txt  README.md
include/f2f/: Common.hpp  Defs.hpp  DirectoryIterator.hpp  FileDescriptor.hpp  FileStorage.hpp  FileSystem.hpp  FileSystemError.hpp  IStorage.hpp
src/: BlockStorage.cpp  BlockStorage.hpp  Directory.cpp  Directory.hpp  DirectoryIterator.cpp  DirectoryIteratorImpl.hpp  Exception.hpp  File.cpp  File.hpp  FileBlocks.cpp  FileBlocks.hpp  FileDescriptor.cpp  FileDescriptorImpl.hpp  FileStorage.cpp  FileSystem.cpp  FileSystemError.cpp  FileSystemImpl.hpp  IStorage.hpp
src/format/: BlockStorage.hpp  Common.hpp  Directory.hpp  File.hpp  Inode.hpp  StorageHeader.hpp
src/util/: Algorithm.hpp  Assert.hpp  BitRange.hpp  FNVHash.hpp  FloorDiv.hpp  StorageT.hpp
test/: Algorithm_test.cpp  BitRange_test.cpp  BlockStorage_test.cpp  Directory_test.cpp  FileSystem_huge_test.cpp  FileSystem_load_test.cpp  FileSystem_test.cpp  File_test.cpp  SparseStorage.cpp  SparseStorage.hpp  StorageInMemory.cpp  StorageInMemory.hpp
